--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -7,19 +7,26 @@
   overflow: hidden;
 }
 
+.settingsIcon {
+  position: fixed;
+  top: var(--tg-safe-area-inset-top);
+  right: calc(var(--tg-safe-area-inset-right) + 90px);
+  bottom: var(--tg-content-safe-area-inset-bottom);
+}
+
 .content {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-width: 1728px;
-
   height: calc(100vh - 140px);
   padding: 20px 15px;
   overflow-y: auto;
   overflow-x: hidden;
 
   &.withHeader {
-    //margin-top: 60px;
-    padding-top: var(--tg-content-safe-area-inset-top) + 60px;
+    margin-top: 60px;
+    //padding-top: var(--tg-content-safe-area-inset-top) + 60px;
+    //margin-top: var(--tg-content-safe-area-inset-top) + 60px;
   }
 }
